[package]
name = "vtx-format"
version = "0.1.1"
edition = "2021"
description = "Binary format specification for VTX plugin system"
license = "MIT"
repository = "https://github.com/Hellohistory/vtx-format"
keywords = ["wasm", "plugin", "format"]
categories = ["encoding"]

readme = "README.md"

[dependencies]
thiserror = "1"
